:memo: update swat with query parameters
